change in password validation

--- a/addingHR2.html
+++ b/addingHR2.html
@@ -11,7 +11,7 @@
 		<form class="login_form" action="index.html" method="post" name="form" onsubmit="return validated()">
 			<div class="font">HR Name</div>
 			<input autocomplete="off" type="text" name="email">
-			<div id="email_error">Enter minimum 6 characters</div>
+			<div id="email_error">Enter minimum  of 6 characters</div>
 			<div class="font">HR Username</div>
 			<input autocomplete="off" type="text" name="email1">
 			<div id="email_error1">Enter minimum 6 characters</div>
