--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 	<title>Welcome Page</title>
 </head>
 <body>
-	<h1>Welcome, Successfully Login :)</h1>
+	<h1>Welcome, very Successfully Login :)</h1>
 	
 </body>
 </html>
